# RooSignal

./: CMakeLists.txt  INSTALL  README.md
include/: ContinuousFilter.h  DiscreteFilter.h  FIR.h  Filter.h  IIR.h  KDE.h  MedianDisc.h  MedianDiscreteFilter.h  MedianFilter.h  TContinuousFilter.h  TDiscreteFilter.h  TFIR.h
src/: ContinuousFilter.cxx  DiscreteFilter.cxx  FIR.cxx  Filter.cxx  IIR.cxx  KDE.cxx  MedianDiscreteFilter.cxx  MedianFilter.cxx  TContinuousFilter.cxx  TDiscreteFilter.cxx  TFIR.cxx
